--- a/ship.html
+++ b/ship.html
@@ -119,7 +119,8 @@
 			document.getElementById("shipSpecialBuildEN").innerHTML = actual_JSON.build.special.EN;
 			document.getElementById("shipLimitedBuildJP").innerHTML = actual_JSON.build.limited.JP;
 			document.getElementById("shipLimitedBuildCN").innerHTML = actual_JSON.build.limited.CN;
-			document.getElementById("shipLimitedBuildEN").innerHTML = actual_JSON.build.limited.EN;
+			document.getElementById("shipLimitedBuildEN").innerHTML = actual_JSON.build.limited.EN;		
+			document.getElementById("shipConstructionBuildTime").innerHTML = actual_JSON.buildTime;	
 			
 			setShipHullIcon(actual_JSON.hull);
 			setShipNavyIcon(actual_JSON.navy);
@@ -1022,8 +1023,8 @@
 	<tr>
 		<td style="width:40%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
-				<tr style="text-align:center;background-color:#262f3b;">
-					<td style="width:40%"></td>
+				<tr style="text-align:center;padding-left:10px;background-color:#262f3b;text-align:left;">
+					<td style="width:40%" id="shipConstructionBuildTime"></td>
 					<td style="width:20%">
 						<b>JP</b>
 					</td>
