--- a/ship.html
+++ b/ship.html
@@ -1023,8 +1023,8 @@
 	<tr>
 		<td style="width:40%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
-				<tr style="text-align:center;padding-left:10px;background-color:#262f3b;text-align:left;">
-					<td style="width:40%" id="shipConstructionBuildTime"></td>
+				<tr style="text-align:center;background-color:#262f3b;">
+					<td style="width:40%;padding-left:10px;text-align:left;" id="shipConstructionBuildTime"></td>
 					<td style="width:20%">
 						<b>JP</b>
 					</td>
