--- a/ship.html
+++ b/ship.html
@@ -1021,7 +1021,7 @@
 		</td>
 	</tr> 
 	<tr>
-		<td style="width:40%;height:1px;">
+		<td style="width:40%;height:1px;" rowspan="2">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 				<tr style="text-align:center;background-color:#262f3b;">
 					<td style="width:40%;padding-left:10px;text-align:left;" id="shipConstructionBuildTime"></td>
@@ -1069,12 +1069,18 @@
 				</td>
 			</table>
 		</td>
-		<td style="width:60%;height:1px;">
+		<td style="width:60%;padding:10px;">
+			testtest
+		</td>
+	</tr>
+	<tr>
+		<td>			
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
-			
+				
 			</table>
 		</td>
 	</tr>
+	
 </table>
 
 </div>
