--- a/ship.html
+++ b/ship.html
@@ -353,8 +353,12 @@
 				<option>'+data.drop.list[x].event+'</option>';
 			}
 			document.getElementById("shipDropEventSelection").innerHTML = text;
+			var e = document.getElementById("shipDropEventSelection");
+			var strUser = e.options[e.selectedIndex].text;
+			document.getElementById("shipDropEventSelectionTitle").innerHTML = strUser;
 		} else {
 			document.getElementById("shipDropEventSelection").disabled = true;
+			document.getElementById("shipDropEventSelectionTitle").innerHTML = "Ship does not drop on any map";
 		}
 	}
 	
