--- a/ship.html
+++ b/ship.html
@@ -139,13 +139,13 @@
 	
 	function setShipHullIcon(hull){
 		if (hull == "Aircraft Carrier" || hull == "Light Aircraft Carrier") {
-			document.getElementById("shipHullIcon").src = "https://i.imgur.com/tlBrE32.png";
+			document.getElementById("shipHullIcon").src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/Hull/cv.png";
 		}
 	}
 	
 	function setShipNavyIcon(navy){
 		if (navy == "Eagle Union") {
-			document.getElementById("shipNavyIcon").src = "https://i.imgur.com/19Od9ak.png";
+			document.getElementById("shipNavyIcon").src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/Navy/uss_icon.png";
 		}
 	}
 	
@@ -331,7 +331,7 @@
 						<font style="vertical-align: inherit;white-space: nowrap;padding: 0px 10px 0px 10px;">Unlock Requirements</font>\
 					</b>\
 				</td>\
-			</tr>'
+			</tr>';
 		for (var x in data.skill) {
 			text = text + '\
 			<tr>\
@@ -598,19 +598,19 @@
 			<td colspan="4" style="text-align:left;height:1px;">
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/firepower_icon.png">&emsp;Firepower</td>
 						<td style="padding-left:5px" id="shipEnhancementFirepower"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/torpedo_icon.png">&emsp;Torpedo</td>
 						<td style="padding-left:5px" id="shipEnhancementTorpedo"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/aviation_icon.png">&emsp;Aviation</td>
 						<td style="padding-left:5px" id="shipEnhancementAviation"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/XHoLMQ5.png">&emsp;Reload</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/reload_icon.png">&emsp;Reload</td>
 						<td style="padding-left:5px" id="shipEnhancementReload"></td>
 					</tr>
 				</table>
@@ -625,15 +625,15 @@
 			<td colspan="4" style="text-align:left;height:1px;">
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/ZYkCzss.png">&emsp;Gold</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/gold_icon.png">&emsp;Gold</td>
 						<td style="padding-left:5px" id="shipScrapIncomeGold"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/gGlQE7q.png">&emsp;Oil</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/oil_icon.png">&emsp;Oil</td>
 						<td style="padding-left:5px" id="shipScrapIncomeOil"></td>
 					</tr>
 					<tr>
-						<td style="width:70%"><img src="https://i.imgur.com/ZfY8Jl8.png">&emsp;Medal</td>
+						<td style="width:70%"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/medal_icon.png">&emsp;Medal</td>
 						<td style="padding-left:5px" id="shipScrapIncomeMedal"></td>
 					</tr>
 				</table>
@@ -851,27 +851,27 @@
 		</td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/FrqZYPR.png">&emsp;HP</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/health_icon.png">&emsp;HP</td>
 		<td style="padding-left:5px" id="shipParameterHP"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Anti-air</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/anti_air_icon.png">&emsp;Anti-air</td>
 		<td style="padding-left:5px" id="shipParameterAntiAir"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Evasion</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/evasion_icon.png">&emsp;Evasion</td>
 		<td style="padding-left:5px" id="shipParameterEvasion"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/aviation_icon.png">&emsp;Aviation</td>
 		<td style="padding-left:5px" id="shipParameterAviation"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/torpedo_icon.png">&emsp;Torpedo</td>
 		<td style="padding-left:5px" id="shipParameterTorpedo"></td>
 	</tr>
 	<tr>
-		<td style="width:70%;padding-left:5px"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
+		<td style="width:70%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/firepower_icon.png">&emsp;Firepower</td>
 		<td style="padding-left:5px" id="shipParameterFirepower"></td>
 	</tr>
 	<tr>
@@ -898,37 +898,37 @@
 		<td colspan="2" style="text-align:left;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 				<tr>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/FrqZYPR.png">&emsp;HP</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/health_icon.png">&emsp;HP</td>
 					<td style="width:15%;text-align:center" id="shipStatsHP"></td>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/XHoLMQ5.png">&emsp;Reload</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/reload_icon.png">&emsp;Reload</td>
 					<td style="width:15%;text-align:center" id="shipStatsReload"></td>
 				</tr>
 				<tr>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/firepower_icon.png">&emsp;Firepower</td>
 					<td style="width:15%;text-align:center" id="shipStatsFirepower"></td>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/torpedo_icon.png">&emsp;Torpedo</td>
 					<td style="width:15%;text-align:center" id="shipStatsTorpedo"></td>
 				</tr>
 				<tr>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/oOsVAXZ.png">&emsp;Evasion</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/evasion_icon.png">&emsp;Evasion</td>
 					<td style="width:15%;text-align:center" id="shipStatsEvasion"></td>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/2DLhZpS.png">&emsp;Anti-air</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/anti_air_icon.png">&emsp;Anti-air</td>
 					<td style="width:15%;text-align:center" id="shipStatsAntiAir"></td>
 				</tr>
 				<tr>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/aviation_icon.png">&emsp;Aviation</td>
 					<td style="width:15%;text-align:center" id="shipStatsAviation"></td>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/mZDSI98.png">&emsp;Cost</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/cost_icon.png">&emsp;Cost</td>
 					<td style="width:15%;text-align:center" id="shipStatsCost"></td>
 				</tr>
 				<tr>
-					<td style="width:35%;padding-left:5px"><img src="https://i.imgur.com/e9y5Y8x.png">&emsp;ASW</td>
+					<td style="width:35%;padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/asw_icon.png">&emsp;ASW</td>
 					<td style="width:15%;text-align:center" id="shipStatsASW"></td>
 					<td style="width:35%;padding-left:5px">Speed</td>
 					<td style="width:15%;text-align:center" id="shipStatsSpeed"></td>
 				</tr>
 				<tr>
-					<td style="padding-left:5px"><img src="https://i.imgur.com/e7GKwuJ.png">&emsp;Armor</td>
+					<td style="padding-left:5px"><img src="https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/armor_icon.png">&emsp;Armor</td>
 					<td colspan="3" style="text-align:left;padding-left:5px" id="shipStatsArmor"></td>
 				</tr>
 			</table>
