--- a/ship.html
+++ b/ship.html
@@ -128,6 +128,7 @@
 			setDefaultEquipment(actual_JSON);
 			setSkillSet(actual_JSON);
 			setShipDropEventSelection(actual_JSON);
+			setDialogueSkinNav(actual_JSON);
 			
 			
 			
