--- a/ship.html
+++ b/ship.html
@@ -426,11 +426,28 @@
 	}
 	
 	function playAudio(btnId,audioId){
+		var sounds = document.getElementsByTagName('audio');
+		
+		for (var i = 0; i < sounds.length; ++i){
+			if (sounds[i].id != audioId){
+				sounds[i].pause();
+			}
+		}
+	
 		var audio = document.getElementById(audioId);
-		audio.play();
-		document.getElementById(btnId).src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/sound_on.png";
+		if (!audio.paused){
+			audio.pause();	
+		} else {
+			document.getElementById(btnId).src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/sound_on.png";
+			audio.play();			
+		}
 		audio.onended = function() {
-		  document.getElementById(btnId).src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/sound_off.png";
+			document.getElementById(btnId).src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/sound_off.png";
+		};
+		
+		audio.onpause = function() {
+		  
+			document.getElementById(btnId).src = "https://s3.us-east-2.amazonaws.com/alg-wiki.com/General/sound_off.png";
 		};
 	}
 	
@@ -1320,7 +1337,7 @@
 	<tr>
 		<td style="width:30%;height:1px;">
 			<table class="wikitablewide" id="shipDialogueTable" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;table-layout:fixed;">
-				<!--<tr style="background-color:#262f3b;text-align:center;">
+				<tr style="background-color:#262f3b;text-align:center;">
 					<td style="width:14%">
 						<b>Event</b>
 					</td>
@@ -1346,7 +1363,7 @@
 					<td id="cn_skin1_1" style="padding: 0px 5px 0px 5px;cursor:pointer;">埃塞克斯级航空母舰一号舰——埃塞克斯</td>
 					<td id="jp_skin1_1" style="padding: 0px 5px 0px 5px;cursor:pointer;">エセックス級航空母艦・エセックス（CV-9)</td>
 					<td id="en_skin1_1" style="padding: 0px 5px 0px 5px;cursor:pointer;"></td>
-				</tr>-->
+				</tr>
 			</table>
 		</td>
 	</tr>
