--- a/ship.html
+++ b/ship.html
@@ -536,7 +536,7 @@
 						text = text + '\
 				</td>\
 				<td id="cn_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;" onclick="switchTranslation(&quot;'+actual_JSON.lines.skin[x].dialogue[y].chineseTL+'&quot;,\'cn_'+skinId+'_'+y+'\')">'+actual_JSON.lines.skin[x].dialogue[y].chinese+'</td>\
-				<td id="jp_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;">'+actual_JSON.lines.skin[x].dialogue[y].japanese+'</td>\
+				<td id="jp_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;" onclick="switchTranslation(&quot;'+actual_JSON.lines.skin[x].dialogue[y].japaneseTL+'&quot;,\'jp_'+skinId+'_'+y+'\')">'+actual_JSON.lines.skin[x].dialogue[y].japanese+'</td>\
 				<td id="en_'+skinId+'_'+y+'" style="padding: 0px 5px 0px 5px;cursor:pointer;">'+actual_JSON.lines.skin[x].dialogue[y].english+'</td>\
 			</tr>';
 					}
